--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -83,6 +83,8 @@ nav{
 
 .contenedorInfo{
     width: 50%;
+    display: flex;
+    align-items: center;
     background-color: white;
     border: 5px solid rgb(64, 182, 64);
     border-radius: 20px;
@@ -91,6 +93,18 @@ nav{
     margin: 50px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bolder;
+}
+
+.contenedorInfo img {
+    margin-left: 20px;
+    width: 200px;
+    height: 200px;
+}
+
+.contenedorInfo strong {
+    color: black;
+    font-weight: 800;
+    font-size: 32px;
 }
 
 .subtitulo{
