--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Prompt&display=swap');
 
 body, html {
     height: 100%;
@@ -75,6 +76,7 @@ nav{
 }
 
 .contenedorArticle{
+    
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -84,6 +86,7 @@ nav{
 .contenedorInfo{
     width: 50%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     background-color: white;
     border: 5px solid rgb(64, 182, 64);
@@ -137,4 +140,16 @@ nav{
 
 #copyright{
     color: white;
+}
+
+h2{
+    text-transform: uppercase;
+    font-family: 'Hammersmith One', sans-serif;
+    margin: 1% 0% 2%;
+}
+
+.contenedorMate{
+    font-family: 'Prompt', sans-serif;
+    display: flex;
+    align-items: center;
 }
